# FontByte

./: .gitignore  .nojekyll  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  _quarto.yml  about.html  github-filesize.py  github_filesize.py  index.html  index.qmd  ital.html  opsz.html  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml  wdth.html  wght.html
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  refresh-pages.yml  release-main.yml
tests/: test_github_filesize.py
