[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fontbyte"
version = "0.1.0"
description = "Generate variable font size tables for Fontsource fonts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiohttp==3.14.1",
  "gidgethub[aiohttp]==5.4.0",
  "ipython==9.15.0",
  "itables==2.8.1",
  "nest-asyncio==1.6.0",
  "packaging>=24.0",
  "pandas==3.0.3",
  "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = ["pre-commit>=3.7.0"]

[project.scripts]
fontbyte = "github_filesize:cli"

[tool.setuptools]
py-modules = ["github_filesize"]
